gccida/c3/put_condition_code
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6003:27: error: must use 'enum' tag to refer to type 'rtx_code'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6003:42: error: must use 'enum' tag to refer to type 'machine_mode'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6005:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6056:8: error: expected expression
code = ::code[v9]; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6119:20: error: use of undeclared identifier 'off_695658'
v10 = ( _BYTE *)( &off_695658 + 4); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6121:20: error: use of undeclared identifier 'off_695658'
v10 = ( _BYTE *)( &off_695658 + 7); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6126:23: error: use of undeclared identifier 'off_695658'
v10 = ( const char *)&off_695658; 
                      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6141:7: error: use of undeclared identifier 'off_685EAB'
v10 = off_685EAB + 2; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/i386.c:6146:23: error: use of undeclared identifier 'unk_695662'
v10 = ( const char *)&unk_695662; 
                      ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/put_condition_code/src/obj/i386.o] Error 1
